Fixed z-index issues, infowindow closing.

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -43,11 +43,15 @@ div#logintab a:visited {
 }
 
 div#header {
+  position: absolute;
+  top: -15px;
+  left: 80px;
   overflow: hidden;
-  width: 60px;
+  width: 150px;
+  height: 100px;
   font-size: 18pt;
-  margin: 15px 90px;
   text-shadow: #777 4px 4px 10px;
+  z-index: 2;
 }
 
 div#map {
@@ -56,7 +60,7 @@ div#map {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: 0;
   margin: 0;
 }
 
