--- a/public/stylesheets/wrapper.css
+++ b/public/stylesheets/wrapper.css
@@ -50,8 +50,8 @@ iframe#home {
 
 iframe#map {
   position: absolute;
-  top: 33.333%;
-  left: 33.333%;
+  top: 33.4%;
+  left: 33.4%;
 }
 
 iframe#signup {
